crates/macro/ui-tests/start-function.stderr
error: the start function cannot have arguments
 --> $DIR/start-function.rs:7:13
  |
7 | pub fn foo2(x: u32) {}
  |             ^^^^^^

error: the start function cannot have generics
  --> $DIR/start-function.rs:10:12
   |
10 | pub fn foo3<T>() {}
   |            ^^^

error[E0277]: the trait bound `std::result::Result<wasm_bindgen::JsValue, ()>: wasm_bindgen::__rt::StartReturn` is not satisfied
  --> $DIR/start-function.rs:27:1
   |
27 | #[wasm_bindgen(start)]
   | ^^^^^^^^^^^^^^^^^^^^^^ the trait `wasm_bindgen::__rt::StartReturn` is not implemented for `std::result::Result<wasm_bindgen::JsValue, ()>`
   |
   = help: the following implementations were found:
             <std::result::Result<(), E> as wasm_bindgen::__rt::StartReturn>
   = note: required by `wasm_bindgen::__rt::StartReturn::into_null_result`

error[E0277]: the trait bound `std::result::Result<wasm_bindgen::JsValue, wasm_bindgen::JsValue>: wasm_bindgen::__rt::StartReturn` is not satisfied
  --> $DIR/start-function.rs:30:1
   |
30 | #[wasm_bindgen(start)]
   | ^^^^^^^^^^^^^^^^^^^^^^ the trait `wasm_bindgen::__rt::StartReturn` is not implemented for `std::result::Result<wasm_bindgen::JsValue, wasm_bindgen::JsValue>`
   |
   = help: the following implementations were found:
             <std::result::Result<(), E> as wasm_bindgen::__rt::StartReturn>
   = note: required by `wasm_bindgen::__rt::StartReturn::into_null_result`
